mdapipkg/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Subscription_Remains_Amount__c</fullName>
        <formula>Grand_Total_Amount__c -  Approved_Charges_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Remains Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Stop_Date__c</fullName>
        <label>Subscription Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Stop_On__c</fullName>
        <label>Subscription Stop On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Full Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription To</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Discounted Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Subtotal__c + Tax__c + Shipping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tracking_No__c</fullName>
        <label>Tracking No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Count_Recurring__c</fullName>
        <label>Transaction Count Recurring</label>
        <summaryFilterItems>
            <field>Order_Transaction__c.Recurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Transaction__c.Response_Status__c</field>
            <operation>contains</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Transaction__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Count__c</fullName>
        <label>Transaction Count</label>
        <summaryForeignKey>Order_Transaction__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Total__c</fullName>
        <label>Transaction Total</label>
        <summarizedField>Order_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Transaction__c.Response_Status__c</field>
            <operation>contains</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Charge, Refund, Credit</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Transaction__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Utm_Campaign__c</fullName>
        <label>Utm Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utm_Content__c</fullName>
        <label>Utm Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utm_Medium__c</fullName>
        <label>Utm Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utm_Source__c</fullName>
        <label>Utm Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utm_Term__c</fullName>
        <label>Utm Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>Aff_Order_Bal_Due_0</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Billing_Email__c</columns>
        <columns>Affiliate_Id__c</columns>
        <columns>Order_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Affiliate_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Balance_Due__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Aff Order Bal Due 0</label>
    </listViews>
    <listViews>
        <fullName>Affiliate_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Affiliate_Id__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Affiliate_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Affiliate Orders</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Billing_Email__c</columns>
        <columns>Affiliate_Id__c</columns>
        <columns>Balance_Due__c</columns>
        <columns>Status__c</columns>
        <columns>Total__c</columns>
        <columns>Date__c</columns>
        <columns>Utm_Source__c</columns>
        <columns>Utm_Medium__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORD-{000000000}</displayFormat>
        <label>Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>